cont-stack-ucontext-layouts: the FFM stack reader on glibc aarch64 (sp at 432) and x86_64 (160) — mcontext inline, bounds from pthread_getattr_np with the guard off the bottom, an 8 KB ucontext buffer; readableWithout for the musl fall-through; TestStackRoom per measured layout; the probe; results from the real suites in Docker (glibc arm64 native, amd64 emulated, musl)
Claude-Session: https://claude.ai/code/session_01VZwf6drLbEaLiAvXi7aDGG